# vkrollercoaster

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
assets/models/: cart.gltf  cube.gltf  knight.gltf  track.gltf
assets/shaders/: default_static.glsl  default_static.hlsl  gen_brdflut.hlsl  irradiance_map.hlsl  material_static.glsl  prefiltered_cube.hlsl  skybox.hlsl  testshader.glsl
assets/shaders/base/: default_pixel.hlsl  filter_cube.hlsl  shader_utils.hlsl  static_vertex.hlsl  vertex_resources.hlsl
scripts/: cmake_options.py  install_vulkan_sdk.py
src/: CMakeLists.txt  allocator.cpp  allocator.h  application.cpp  application.h  buffers.cpp  buffers.h  command_buffer.cpp  command_buffer.h  components.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  imgui_controller.cpp  imgui_controller.h  imgui_extensions.cpp  imgui_extensions.h  input_manager.cpp  input_manager.h  light.cpp  light.h  main.cpp  material.cpp  material.h  model.cpp  model.h  pch.h  pipeline.cpp  pipeline.h  ref.h  render_target.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_serializer.cpp  scene_serializer.h  script.h  shader.cpp  (+10 more)
src/menus/: inspector.cpp  menus.h  renderer_info.cpp  viewport.cpp
