cmake_minimum_required(VERSION 3.10)
set(VKROLLERCOASTER_INCLUDES "${CMAKE_SOURCE_DIR}/vendor/glm" ${Vulkan_INCLUDE_DIR})
set(VKROLLERCOASTER_LIBS stb glfw spdlog spirv-cross-glsl EnTT imgui shaderc ${Vulkan_LIBRARIES})
if(UNIX AND NOT APPLE)
    list(APPEND VKROLLERCOATER_LIBS pthread stdc++fs)
endif()
file(GLOB_RECURSE MANIFEST "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
add_executable(vkrollercoaster ${MANIFEST})
target_include_directories(vkrollercoaster PRIVATE ${VKROLLERCOASTER_INCLUDES})
target_link_libraries(vkrollercoaster PRIVATE ${VKROLLERCOASTER_LIBS})
set_target_properties(vkrollercoaster PROPERTIES CXX_STANDARD 17)
if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.16)
    target_precompile_headers(vkrollercoaster PRIVATE pch.h)
endif()